feat: Adds additional route and migrations

--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   </head>
   <body>
     <header>
       <div class="container">
         <div id="branding">
-          <h1><span class="highlight">SimSphere</span></h1>
+          <h1><span class="highlight">Saas</span></h1>
         </div>
         <nav>
           <ul>
@@ -27,14 +28,19 @@
               <a href="/contact">Contact</a>
             </li>
           </ul>
+          <div class="auth-buttons" w-tid="21">
+            <a href="/auth/login" class="auth-button" w-tid="22">Login</a>
+            <a href="/auth/register" class="auth-button" w-tid="23">Register</a>
+          </div>
         </nav>
+
       </div>
     </header>
 
     {{embed}}
 
     <footer>
-      <p>SimSphere, Copyright &copy; 2023</p>
+      <p>Saas, Copyright &copy; 2023</p>
     </footer>
   </body>
 </html>
